--- a/arch/arm/build
+++ b/arch/arm/build
@@ -9,6 +9,7 @@ cat ../../generic/forth/core.forth \
     ../../generic/forth/ringbuf.forth \
     ../../generic/forth/ringbuf_test.forth \
     ../../generic/forth/test.forth \
+    ../../generic/forth/decompiler.forth \
     greet \
     /dev/stdin \
     | ./punyforth
